[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/Pixeled.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://control/options.gd" type="Script" id=2]
[ext_resource path="res://sounds/cambiando de pesta√±a.mp3" type="AudioStream" id=3]
[ext_resource path="res://background/background.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 15
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_right = 0.5
margin_left = -135.0
margin_right = 135.0
margin_bottom = 87.0
custom_fonts/font = SubResource( 1 )
text = "Options
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 42.0
margin_top = -114.0
margin_right = 555.0
margin_bottom = 102.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 513.0
margin_bottom = 42.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 144.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 1 )
text = "Full Screen:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fullOrNot" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
margin_left = 148.0
margin_right = 172.0
margin_bottom = 42.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 46.0
margin_right = 513.0
margin_bottom = 88.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_right = 93.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 1 )
text = "Volume:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="controlVolume" type="HSlider" parent="VBoxContainer/HBoxContainer2"]
margin_left = 97.0
margin_right = 513.0
margin_bottom = 42.0
size_flags_horizontal = 7
size_flags_vertical = 1
min_value = -80.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -203.0
margin_top = -127.0
margin_bottom = -14.0
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.00392157, 0.996078, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0.447059, 0.388235, 1 )
custom_fonts/font = SubResource( 2 )
text = "Menu"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[connection signal="pressed" from="VBoxContainer/HBoxContainer/fullOrNot" to="." method="_on_CheckBox_pressed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/controlVolume" to="." method="_on_controlVolume_value_changed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
